<resources>
    <string name="app_launcher_name">Messages</string>
    <string name="type_a_message">Type a message…</string>
    <string name="message_not_sent_short">Message not sent</string>
    <string name="message_not_sent_touch_retry">Not sent. Touch to retry.</string>
    <string name="message_sending_error">Your message to \'%s\' has not been sent</string>
    <string name="add_person">Add Person</string>
    <string name="attachment">Attachment</string>
    <string name="no_conversations_found">No stored conversations have been found</string>
    <string name="start_conversation">Start a conversation</string>
    <string name="reply">Reply</string>
    <string name="show_character_counter">Show a character counter at writing messages</string>
    <string name="loading_messages">Loading messages…</string>
    <string name="no_reply_support">Sender doesn\'t support replies</string>
    <string name="draft">Draft</string>
    <string name="sending">Sending…</string>
    <string name="pin_conversation">Pin to the top</string>
    <string name="unpin_conversation">Unpin</string>
    <string name="forward_message">Forward</string>
    <string name="compress_error">Unable to compress image to selected size</string>
    <string name="duplicate_item_warning">Duplicate item was not included</string>
    <plurals name="and_other_contacts">
        <item quantity="one">and %d other</item>
        <item quantity="other">and %d others</item>
    </plurals>
    <string name="new_conversation">New conversation</string>
    <string name="inbox_group_today">Today</string>
    <string name="inbox_group_yesterday">Yesterday</string>
    <string name="inbox_group_this_week">This week</string>
    <string name="inbox_group_this_month">This month</string>
    <string name="inbox_group_older">Older</string>
    <string name="add_contact_or_number">Add Contact or Number…</string>
    <string name="suggestions">Suggestions</string>
    <string name="members">Members</string>
    <string name="conversation_name">Conversation name</string>
    <string name="conversation_details">Conversation details</string>
    <string name="rename_conversation">Rename conversation</string>
    <string name="rename_conversation_warning">Only you can see this conversation name</string>
    <string name="scheduled_message">Scheduled message</string>
    <string name="schedule_message">Schedule message</string>
    <string name="schedule_send">Schedule send</string>
    <string name="cancel_schedule_send">Cancel schedule send</string>
    <string name="must_pick_time_in_the_future">You must pick a time in the future</string>
    <string name="schedule_send_warning">Keep the phone on and make sure there is nothing killing the app while in background.</string>
    <string name="update_message">Update message</string>
    <string name="send_now">Send now</string>
    <string name="message_details">Message details</string>
    <string name="message_details_sender">Sender</string>
    <string name="message_details_receiver">Receiver</string>
    <string name="message_details_sent_at">Sent at</string>
    <string name="message_details_received_at">Received at</string>
    <string name="channel_received_sms">Received SMS</string>
    <string name="new_message">New message</string>
    <string name="mark_as_read">Mark as Read</string>
    <string name="mark_as_unread">Mark as Unread</string>
    <string name="me">Me</string>
    <string name="enable_custom_notifications">Enable custom notifications</string>
    <string name="unarchive">Unarchive</string>
    <string name="empty_archive">Delete all archived conversations</string>
    <string name="archived_conversations">Archive</string>
    <string name="show_archived_conversations">Show archived conversations</string>
    <string name="archive">Archive</string>
    <string name="no_archived_conversations">No archived conversations have been found</string>
    <string name="archive_emptied_successfully">The archive has been emptied successfully</string>
    <string name="empty_archive_confirmation">Are you sure you want to empty the archive? All archived conversations will be permanently lost.</string>
    <string name="keep_conversations_archived">Keep conversations archived</string>
    <string name="restore">Restore</string>
    <string name="restore_all_messages">Restore all messages</string>
    <string name="empty_recycle_bin_messages_confirmation">Are you sure you want to empty the Recycle Bin? The messages will be permanently lost.</string>
    <string name="skip_the_recycle_bin_messages">Skip the Recycle Bin, delete messages directly</string>
    <string name="delete_whole_conversation_confirmation">Are you sure you want to delete all messages of this conversation?</string>
    <string name="archive_confirmation">Are you sure you want to archive %s?</string>
    <string name="restore_whole_conversation_confirmation">Are you sure you want to restore all messages of this conversation?</string>
    <string name="restore_confirmation">Are you sure you want to restore %s?</string>
    <plurals name="delete_conversations">
        <item quantity="one">%d conversation</item>
        <item quantity="other">%d conversations</item>
    </plurals>
    <plurals name="delete_messages">
        <item quantity="one">%d message</item>
        <item quantity="other">%d messages</item>
    </plurals>
    <string name="keyword">Keyword</string>
    <string name="blocked_keywords">Blocked keywords</string>
    <string name="manage_blocked_keywords">Manage blocked keywords</string>
    <string name="not_blocking_keywords">You are not blocking any keywords. You may add keywords here to block all messages containing them.</string>
    <string name="add_a_blocked_keyword">Add a blocked keyword</string>
    <string name="keyword_add_regex_pattern">Add regex pattern</string>
    <string name="keyword_add_plain_words">Add plain word(s)</string>
    <string name="keyword_already_exists">Already exists</string>
    <string name="keyword_invalid_regex_rejected">Invalid regex will be rejected</string>
    <string name="keyword_comma_separated_hint">Comma-separated for multiple</string>
    <string name="keyword_toggle_regex">Toggle regex</string>
    <string name="keyword_add">Add</string>
    <string name="keyword_regex_label">Regex</string>
    <string name="keyword_remove">Remove</string>
    <string name="keyword_edit_title">Edit Keyword</string>
    <string name="keyword_label">Keyword/Pattern</string>
    <string name="keyword_regex_mode">Regex mode:</string>
    <string name="keyword_regex_on">ON</string>
    <string name="keyword_regex_off">OFF</string>
    <string name="keyword_invalid_regex">Invalid regex</string>
    <string name="keyword_save">Save</string>
    <string name="keyword_cancel">Cancel</string>
    <string name="keyword_regex_limit_reached">Regex limit (%1$d) reached</string>
    <string name="keyword_plain_limit_reached">Keyword limit (%1$d) reached</string>
    <string name="keyword_invalid_regex_details">Invalid regex: %1$s</string>
    <string name="inbox_swipe_start_action">Swipe from start</string>
    <string name="inbox_swipe_end_action">Swipe from end</string>
    <string name="screen_view_mode">Screen view mode</string>
    <string name="screen_view_mode_auto">Auto</string>
    <string name="screen_view_mode_single">Single / long view</string>
    <string name="screen_view_mode_two_pane">Separated / split view</string>
    <string name="swipe_action_none">Do nothing</string>
    <string name="swipe_action_toggle_read_status">Toggle read status</string>
    <string name="swipe_action_block_number">Block number</string>
    <string name="not_available">Not available</string>
    <string name="not_available_on_group_conversations">Not available on group conversations</string>
    <string name="not_available_on_this_device">Not available on this device</string>
    <string name="not_available_no_phone_number">No valid phone number available</string>
    <string name="use_simple_characters">Remove accents and diacritics at sending messages</string>
    <string name="send_on_enter">Send message on pressing Enter</string>
    <string name="mms_file_size_limit">Resize sent MMS images</string>
    <string name="mms_file_size_limit_none">No limit</string>
    <string name="outgoing_messages">Outgoing messages</string>
    <string name="group_message_mms">Send group messages as MMS</string>
    <string name="send_long_message_mms">Send long messages as MMS</string>
    <string name="manage_categories">Manage Categories</string>
    <string name="saved_views">Folder</string>
    <string name="saved_views_current">Folder (%1$s)</string>
    <string name="saved_view_actions">Actions</string>
    <string name="create_view">Create view</string>
    <string name="edit_view">Edit view</string>
    <string name="delete_view">Delete view</string>
    <string name="enter_view_name">Enter view name</string>
    <string name="view_name_cannot_be_empty">View name cannot be empty</string>
    <string name="delete_view_confirmation">Delete %1$s?</string>
    <string name="main_view_immutable">Main view cannot be edited or deleted</string>
    <string name="choose_view_icon">Choose view icon</string>
    <string name="view_icon_home">Home</string>
    <string name="view_icon_filter">Filter</string>
    <string name="view_icon_archive">Archive</string>
    <string name="view_icon_schedule">Schedule</string>
    <string name="view_icon_image">Image</string>
    <string name="view_icon_music">Music</string>
    <string name="view_icon_pin">Pin</string>
    <string name="filter_by_tag">Filter by tag</string>
    <string name="all_tags">All tags</string>
    <string name="set_category">Assign to Folder</string>
    <string name="assign_folder">Assign to Folder</string>
    <string name="clear">Clear</string>
    <string name="add_category">Add Category</string>
    <string name="category_name">Category Name</string>
    <string name="enter_category_name">Enter category name</string>
    <string name="category_name_cannot_be_empty">Category name cannot be empty</string>
    <string name="color">Color</string>
    <string name="color_blue">Blue</string>
    <string name="color_green">Green</string>
    <string name="color_orange">Orange</string>
    <string name="color_red">Red</string>
    <string name="color_purple">Purple</string>
    <string name="color_teal">Teal</string>
    <string name="color_pink">Pink</string>
    <string name="color_indigo">Indigo</string>
    <string name="color_brown">Brown</string>
    <string name="color_gray">Gray</string>
    <string name="default_label">Default</string>
    <string name="select_color">Select color</string>
    <string name="choose_color">Choose color</string>
    <string name="choose_position">Choose position</string>
    <string name="position">Position</string>
    <string name="description">Description</string>
    <string name="enter_category_description">Enter category description</string>
     <string name="keywords">Keywords</string>
     <string name="enter_keywords_comma_separated">Enter keywords separated by commas</string>
     <string name="regex_mode">Use regex</string>
     <string name="regex_mode_description">Match using regular expression</string>
     <string name="invalid_regex_pattern">Invalid regex pattern</string>
     <string name="icon">Icon</string>
    <string name="enter_icon">Enter icon or emoji</string>
    <string name="pick_color">Pick color</string>
    <string name="no_categories">No categories have been created yet</string>
    <string name="no_folders">No folders have been created yet</string>
    <string name="messages">Messages</string>
    <string name="export_messages">Export messages</string>
    <string name="export_sms">Export SMS</string>
    <string name="export_mms">Export MMS</string>
    <string name="import_messages">Import messages</string>
</resources>