<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <org.fossify.commons.views.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_name"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />

        <org.fossify.commons.views.MyEditText
            android:id="@+id/add_category_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_category_name"
            android:inputType="text"
            android:singleLine="true" />

        <org.fossify.commons.views.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:text="@string/color"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:id="@+id/add_category_color_preview"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="@dimen/normal_margin"
                android:background="@drawable/circle_background" />

            <org.fossify.commons.views.MyTextView
                android:id="@+id/add_category_pick_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_all_corners"
                android:paddingStart="@dimen/normal_margin"
                android:paddingTop="@dimen/small_margin"
                android:paddingEnd="@dimen/normal_margin"
                android:paddingBottom="@dimen/small_margin"
                android:text="@string/select_color" />
        </LinearLayout>

        <org.fossify.commons.views.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:text="@string/description"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />

        <org.fossify.commons.views.MyEditText
            android:id="@+id/add_category_description_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_category_description"
            android:inputType="text"
            android:singleLine="true" />

        <org.fossify.commons.views.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:text="@string/keywords"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />

        <androidx.compose.ui.platform.ComposeView
            android:id="@+id/add_category_keywords_compose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <org.fossify.commons.views.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:text="@string/icon"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />

        <org.fossify.commons.views.MyEditText
            android:id="@+id/add_category_icon_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_icon"
            android:inputType="text"
            android:singleLine="true" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
