<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <org.fossify.commons.views.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_view_name"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />

        <org.fossify.commons.views.MyEditText
            android:id="@+id/folder_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_view_name"
            android:inputType="text"
            android:singleLine="true" />

        <org.fossify.commons.views.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:text="@string/position"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/folder_position_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin" />

        <org.fossify.commons.views.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:text="@string/color"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/folder_color_options_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/small_margin" />
        </HorizontalScrollView>

        <org.fossify.commons.views.MyTextView
            android:id="@+id/folder_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:background="@drawable/ripple_all_corners"
            android:gravity="center"
            android:padding="@dimen/medium_margin"
            android:text="@string/delete_view"
            android:textAllCaps="true"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold"
            android:visibility="gone" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
